--- a/index.html
+++ b/index.html
@@ -36,13 +36,39 @@
       class="bg-img1 size1 flex-w flex-c-m p-t-55 p-b-55 p-l-15 p-r-15"
       style="background-image: url('images/Background.png');"
     >
-      <div class="wsize1 bor1 bg1 p-t-175 p-b-45 p-l-15 p-r-15 respon1">
+      <div class="wsize1 bor1 bg1 p-t-80 p-b-45 p-l-15 p-r-15 respon1">
         <div class="wrappic1">
           <img src="images/logo.png" alt="LOGO" />
         </div>
 
-        <p class="txt-center m1-txt1 p-t-33 p-b-68">
+        <p class="txt-center m1-txt1 p-t-33">
           We can't wait to help you find parties!
+        </p>
+
+        <form
+          action="https://formspree.io/rikinpatel10@yahoo.com"
+          method="POST"
+          class="flex-w flex-c-m contact100-form validate-form p-t-30"
+        >
+          <div
+            class="wrap-input100 validate-input where1"
+            data-validate="Email is required: ex@abc.xyz"
+          >
+            <input
+              class="s1-txt2 placeholder0 input100"
+              type="text"
+              name="email"
+              placeholder="Your Email"
+            />
+            <span class="focus-input100"></span>
+          </div>
+          <button class="flex-c-m s1-txt3 size3 how-btn trans-04 where1">
+            Get Notified
+          </button>
+        </form>
+
+        <p class="s1-txt4 txt-center p-t-10 p-b-55">
+          I promise to <span class="bor2">never</span> spam
         </p>
 
         <div class="wsize2 flex-w flex-c hsize1 cd100">
@@ -66,32 +92,6 @@
             <span class="s1-txt1">Seconds</span>
           </div>
         </div>
-
-        <form
-          action="https://formspree.io/rikinpatel10@yahoo.com"
-          method="POST"
-          class="flex-w flex-c-m contact100-form validate-form p-t-55"
-        >
-          <div
-            class="wrap-input100 validate-input where1"
-            data-validate="Email is required: ex@abc.xyz"
-          >
-            <input
-              class="s1-txt2 placeholder0 input100"
-              type="text"
-              name="email"
-              placeholder="Your Email"
-            />
-            <span class="focus-input100"></span>
-          </div>
-          <button class="flex-c-m s1-txt3 size3 how-btn trans-04 where1">
-            Get Notified
-          </button>
-        </form>
-
-        <p class="s1-txt4 txt-center p-t-10">
-          I promise to <span class="bor2">never</span> spam
-        </p>
       </div>
     </div>
 
