--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </p>
 
         <form
-          action="https://formspree.io/rikinpatel10@yahoo.com"
+          action="https://formspree.io/partyfinder10@gmail.com"
           method="POST"
           class="flex-w flex-c-m contact100-form validate-form p-t-30"
         >
