--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         </div>
 
         <p class="txt-center m1-txt1 p-t-33">
-          We can't wait to help you find parties!
+          Enter your email to be in the
+          <span style="color: #ed2127">first 500</span> to get access to
+          exclusive parties.
         </p>
 
         <form
