Added privacy policy page and linked it to the main page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         </form>
 
         <p class="s1-txt4 txt-center p-t-10 p-b-55">
-          I promise to <span class="bor2">never</span> spam
+          I promise to <span class="bor2">never</span> spam. 
+          Read our <a href="privacy_policy.html" style="text-decoration: none; color:#ed2127;"> policies </a> here.
         </p>
 
         <div class="wsize2 flex-w flex-c hsize1 cd100">
