--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p class="txt-center m1-txt1 p-t-33">
           Enter your email to be in the
           <span style="color: #ed2127">first 500</span> to get access to
-          exclusive parties.
+          exclusive parties through our FREE app!
         </p>
 
         <form
