Added OneLink for AppStore & PlayStore

--- a/index.html
+++ b/index.html
@@ -64,9 +64,14 @@
             />
             <span class="focus-input100"></span>
           </div>
-          <button class="flex-c-m s1-txt3 size3 how-btn trans-04 where1">
-            Get Notified
-          </button>
+          <div class="btn btn-group">
+            <button class="flex-c-m s1-txt3 size3 how-btn trans-04 where1">
+              Get Notified
+            </button>
+            <button class="flex-c-m s1-txt3 size3 how-btn trans-04 where1">
+              <a href="http://onelink.to/e8y6mx" style="text-decoration: none; color:white;"> Download HERE </a>
+            </button>
+          </div>
         </form>
 
         <p class="s1-txt4 txt-center p-t-10 p-b-55">
