Added response form, removed countdown

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <link rel="stylesheet" type="text/css" href="css/util.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <!--===============================================================================================-->
+    <style>
+      iframe {
+        margin-top: 45px;
+      }
+    
+    </style>
   </head>
   <body>
     <div
@@ -72,6 +78,7 @@
               <a href="http://onelink.to/e8y6mx" style="text-decoration: none; color:white;"> Download HERE </a>
             </button>
           </div>
+          <iframe class="form" src="https://docs.google.com/forms/d/e/1FAIpQLSdsd4xwLjzbOoy8eHiNTY1ey7Nwts8I7t-sGJgRijxsLxIiSA/viewform?embedded=true" width="640" height="485" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </form>
 
         <p class="s1-txt4 txt-center p-t-10 p-b-55">
@@ -79,7 +86,7 @@
           Read our <a href="privacy_policy.html" style="text-decoration: none; color:#ed2127;"> policies </a> here.
         </p>
 
-        <div class="wsize2 flex-w flex-c hsize1 cd100">
+        <!-- <div class="wsize2 flex-w flex-c hsize1 cd100">
           <div class="flex-col-c-m size2 how-countdown">
             <span class="l1-txt1 p-b-9 days">50</span>
             <span class="s1-txt1">Days</span>
@@ -99,7 +106,7 @@
             <span class="l1-txt1 p-b-9 seconds">39</span>
             <span class="s1-txt1">Seconds</span>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
