--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </div>
 
         <p class="txt-center m1-txt1 p-t-33">
-          Enter your email to be in the
-          <span style="color: #ed2127">first 500</span> to get access to
-          exclusive parties through our FREE app!
+          Enter your email to get 
+          <span style="color: #ed2426">access </span> to
+          <span style="color: #ed2426"> exclusive </span> parties through the FREE PartyFinder app!
         </p>
 
         <form
@@ -83,7 +83,7 @@
 
         <p class="s1-txt4 txt-center p-t-10 p-b-55">
           I promise to <span class="bor2">never</span> spam. 
-          Read our <a href="privacy_policy.html" style="text-decoration: none; color:#ed2127;"> policies </a> here.
+          Read our <a href="privacy_policy.html" style="text-decoration: none; color:#ed2426;"> policies </a> here.
         </p>
 
         <!-- <div class="wsize2 flex-w flex-c hsize1 cd100">
